# Mebal

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: main.css
crates/common/: Cargo.toml
crates/common/src/: avdict.rs  lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: avdict.rs  codecpar.rs  lib.rs  linux_recorder.rs  osx_recorder.rs  recorder.rs  utils.rs  windows_recorder.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
src/: capture.rs  capture_strategy.rs  compression.rs  ffmpeg_encoder.rs  generic_capture.rs  main.rs  upload.rs  video_encoding.rs  video_encoding_strategy.rs  windows_capture.rs  windows_encoder.rs
src/linux/: mod.rs
src/osx/: mod.rs  osx_capture.rs
src/utils/: capture_strategy.rs  compression.rs  mod.rs  storage.rs  upload.rs
src/windows/: mod.rs  windows_capture.rs
