[package]
name = "Mebal"
version = "0.1.3"
edition = "2021"
description = "An OS independent replay buffer solution."
license = "MIT"
authors = ["Brody Larson <brody@larson.dev>"]
repository = "https://github.com/lurkny/Mebal"


[workspace]
members = [
    "crates/recorder"
, "crates/storage"]

[dependencies]
anyhow = "1.0"
dioxus = {version = "0.6.3", features = ["desktop"]}
recorder = { path = "crates/recorder" }
rdev = "0.5"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.45.1", features = ["full"] }



[profile.release]
lto = true           # Full LTO for cross-crate optimization
opt-level = 3        # Aggressive optimizations
codegen-units = 1    # Maximum optimization potential
strip = true         # Remove debug symbols
panic = "abort"      # Smaller, faster panic handling

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
